# rust-zero-to-senior

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md
cmd/smoke/: main.rs
src/: main.rs
src/api/: chat.rs  lessons.rs  mod.rs  ratelimit.rs  run.rs  static_assets.rs
src/config/: dotenv.rs  mod.rs
src/lesson/: catalog.rs  lessons_algorithms.rs  lessons_basics.rs  lessons_concurrency.rs  lessons_control_flow.rs  lessons_data_structures.rs  lessons_ecosystem.rs  lessons_errors.rs  lessons_interview_prep.rs  lessons_lifetimes.rs  lessons_memory.rs  lessons_ownership.rs  lessons_pitfalls.rs  lessons_stdlib.rs  lessons_tooling.rs  lessons_traits_generics.rs  lessons_web.rs  mod.rs
src/runner/: local.rs  mod.rs  playground.rs
src/tutor/: anthropic.rs  gemini.rs  httpx.rs  mod.rs  openai.rs  provider.rs  service.rs
web/: index.html
web/js/: api.js  app.js  chat.js  dom.js  lessons.js  markdown.js  playground.js  state.js  theme.js
web/styles/: base.css  chat.css  components.css  lesson.css  playground.css  sidebar.css  tokens.css
