[package]
name = "rust-tut"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Zero → Senior Engineer interactive Rust tutorial"
license = "MIT"

[[bin]]
name = "rust-tut"
path = "src/main.rs"

[[bin]]
name = "smoke"
path = "cmd/smoke/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "process", "fs", "io-util", "sync"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "tower-log"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
form_urlencoded = "1"
once_cell = "1"
regex-lite = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
